<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">petaSOS 飛甲</string>
    <string name="intro">Schedule an SMS to your trusted contact(s), with your latest location.
Scheduled message is stored on the phone <b>only</b>.  Location is not tracked; <b>only pulled when</b> the message is sent at scheduled time.
</string>
    <string name="message">Message</string>
    <string name="name">User full name</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="plus_15_mins">+15 mins</string>
    <string name="plus_30_mins">+30 mins</string>
    <string name="plus_1_hour">+1 hour</string>
    <string name="plus_2_hours">+2 hours</string>
    <string name="back">Back</string>
    <string name="enable_location">Enable location service</string>
    <string name="emergency_contact">Emergency Contact(s)</string>
    <string name="secondary_contact">Secondary Contact(s)</string>
    <string name="send_at">Message will be sent at:</string>
    <string name="add_contact">Specify contact info</string>
    <string name="msg_created">Your message is scheduled!</string>
    <string name="msg_changed">Your message is updated.</string>
    <string name="msg_cancelled">Your message is cancelled.</string>
    <string name="validation_date">Please specify a future time</string>
    <string name="validation_name">Please specify your full name.</string>
    <string name="validation_contacts">Please specify at least one contact.</string>
    <string name="validation_number">Please specify phone number.</string>
    <string name="validation_72_hours">Set a time within a 72 hours period</string>
    <string name="ok">OK</string>
    <string name="settings_annotation">*Changes will not affect already scheduled message</string>
    <string name="dialog_cancel_msg">Are you sure to cancel the message?</string>
    <!--SMS-->
    <string name="my_name_is">Name:</string>
    <string name="my_preset_time">Preset time to safety is:</string>
    <string name="last_location">Last location:</string>
    <string name="bg_btn">Attention: Best results</string>
    <string name="bg_title">Disable Battery Optimizations</string>
    <string name="bg_1">Why should battery optimizations be disabled?\n
Due to battery optimizations, your device may restrict background work of petaSOS, and block the scheduled message.</string>
    <string name="bg_2">We strongly recommend that battery optimizations to be DISABLED. This will not consume more power.</string>
    <string name="bg_3">Depending on your phone model:\n Battery > App launch > petaSOS 飛甲 > Manage manually</string>
    <string name="bg_4">or\n Settings > Apps > Special app access > Battery optimization</string>
    <string name="open_phone_settings">Open phone settings</string>
    <string name="close">Close</string>
    <string name="active_message">Active message</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minutes">mins</string>
    <string name="delay">Delay</string>
    <string name="delay_by">Delay by</string>
    <!--Intro-->
    <string name="intro_welcome">Welcome to petaSOS 飛甲</string>
    <string name="intro_choose_language">Choose your language</string>
    <string name="intro_back">Back</string>
    <string name="intro_next">Next</string>
    <string name="intro_schedule_title">Schedule an SMS to your trusted contacts</string>
    <string name="intro_schedule_text1">Your information and scheduled message are stored on your phone only</string>
    <string name="intro_schedule_text2">No cloud services are used for security purpose</string>
    <string name="intro_location_title">Include location</string>
    <string name="intro_location_text1">Your message can include your location information with the message is sent, allowing your contacts to locate you</string>
    <string name="intro_location_text2">Location is not tracked, only detected when the message is sent at the scheduled time</string>
    <string name="intro_contacts_title">Add your contacts</string>
    <string name="intro_contacts_text1">Specify contacts who will receive the message</string>
    <string name="intro_em_contacts_subtext">will both receive the message and be listed in the message</string>
    <string name="settings_sec_contacts_subtext">will only receive the message</string>
    <string name="intro_name_title">Insert your full name</string>
    <string name="intro_name_text">Your name will appear in the message</string>
    <string name="phone_number">Phone number</string>
    <string name="or">or</string>
    <string name="pick_phone_contacts">Pick from phone contacts</string>
    <string name="confirm">Confirm</string>
</resources>