<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_m">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_intro"
                style="@style/styleSubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/intro"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/location_switch_intro"
                style="@style/styleSubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/enable_location" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/styleSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username_intro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/styleSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/emergency_contact" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_em_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_s"
                app:singleLine="false" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/styleSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/secondary_contact" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_sec_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_s"
                app:singleLine="false" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="@dimen/margin_m"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>