<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="110dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_head"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lang1"
                style="@style/ButtonLang"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="ENG"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/purple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lang2"
                style="@style/ButtonLang"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:text="繁" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lang3"
                style="@style/ButtonLang"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:text="简" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_settings"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <FrameLayout
            android:id="@+id/change_msg_settings_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/card_settings"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_m"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintBottom_toTopOf="@id/layout_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_settings">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_xl">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_msg"
                    style="@style/styleSubtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_msg_edit"
                    style="@style/styleBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_s" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_be_home_by"
                    style="@style/styleSubtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_m"
                    android:text="@string/send_at" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_date_time_change"
                    style="@style/styleBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_s"
                    android:layout_marginTop="@dimen/margin_m"
                    android:textSize="16sp"
                    tools:text="01/06/2020 14:30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_m"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_15_mins"
                        style="@style/ButtonIncrement"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_marginEnd="@dimen/margin_m"
                        android:layout_weight="1"
                        android:text="@string/plus_15_mins" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_30_mins"
                        style="@style/ButtonIncrement"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_weight="1"
                        android:text="@string/plus_30_mins" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_m"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_1_hour"
                        style="@style/ButtonIncrement"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_marginEnd="@dimen/margin_m"
                        android:layout_weight="1"
                        android:text="@string/plus_1_hour" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_2_hours"
                        style="@style/ButtonIncrement"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_weight="1"
                        android:text="@string/plus_2_hours" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_change"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="@dimen/margin_m"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="@dimen/margin_m"
            android:layout_weight="1"
            android:text="@string/reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>